--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/testing-library__jest-dom": "5.14.0",
     "@types/webpack": "5.28.0",
     "@types/webpack-env": "1.16.2",
+    "axios": "0.24.0",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react-hooks": "4.2.0",
