--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 BROWSER=none
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-REACT_APP_API_ROUTE=https://tracker-api.racoon.dev/v1
+REACT_APP_API_ROUTE=http://localhost:5000/v1
